Improvements: automated download and local caching of data from DataGouv.fr, better graphics

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,14 @@
- numpy
- scipy
- pandas
- matplotlib
- seaborn
  docopt
+ hashlib
+ matplotlib
+ numpy
+ pandas
+ pprint
+ requests
+ scipy
+ seaborn
+ unittest
+ urllib
  xlrd
  IPython
- 
+
