Checkpoint: adding ability to use xml+rdf queries for meta information EU Open Data Portal is first target (https://data.europa.eu/euodp)

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,14 +1,18 @@
+ IPython
  docopt
  hashlib
+ lxml
  matplotlib
+ networkx
  numpy
  pandas
  pprint
+ rdflib
  requests
  scipy
  seaborn
+ sklearn
  unittest
  urllib
  xlrd
- IPython
- sklearn
+ 
